--- a/dev-guide/heurist-sdk/comfyui-upscaling.mdx
+++ b/dev-guide/heurist-sdk/comfyui-upscaling.mdx
@@ -9,7 +9,7 @@ This workflow extends the base [ComfyUI Workflow](/dev-guide/heurist-sdk/comfyui
 
 # Example Request
 
-```python 
+```typescript 
 import Heurist from 'heurist'
  
 const heurist = new Heurist({
