refactor: link agents list to main framework's readme

--- a/dev-guide/heurist-mesh/introduction.mdx
+++ b/dev-guide/heurist-mesh/introduction.mdx
@@ -110,22 +110,7 @@ Check status and get results of an async task.
 
 ## Available Agents
 
-The Mesh API provides access to a growing collection of specialized agents:
-
-- [AlloraPricePredictionAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/allora_price_prediction_agent.py)
-- [BitquerySolanaTokenInfoAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/bitquery_solana_token_info_agent.py)
-- [CoinGeckoTokenInfoAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/coingecko_token_info_agent.py)
-- [DeepResearchAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/deep_research_agent.py)
-- [DexScreenerTokenInfoAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/dexscreener_token_info_agent.py)
-- [DuckDuckGoSearchAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/duckduckgo_search_agent.py)
-- [ElfaTwitterIntelligenceAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/elfa_twitter_intelligence_agent.py)
-- [FirecrawlSearchAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/firecrawl_search_agent.py)
-- [GoplusAnalysisAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/goplus_analysis_agent.py)
-- [MasaTwitterSearchAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/masa_twitter_search_agent.py)
-- [PumpFunTokenAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/pumpfun_token_agent.py)
-- [ZkIgniteAnalystAgent](https://github.com/heurist-network/heurist-agent-framework/blob/main/mesh/zkignite_analyst_agent.py)
-
-*More agents are in active development. Check the [metadata endpoint](https://mesh.heurist.ai/mesh_agents_metadata.json) for the latest list.*
+The Mesh API provides access to a growing collection of specialized agents. For a complete and up-to-date list, see the [Available Mesh Agents](https://github.com/heurist-network/heurist-agent-framework?tab=readme-ov-file#available-mesh-agents) section in the main repository README.
 
 ### Agent Metadata
 
