--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -11,7 +11,7 @@ You can use the following model name as `model_id` in Heurist API/SDK.
 
 ### Large Language Models (LLMs)
   * `deepseek/deepseek-r1`: DeepSeek R1 is a groundbreaking open-source AI model that achieves performance comparable to OpenAI's o1 model across math, code, and reasoning tasks, supporting self-verification and reflection, while being more cost-efficient than its competitors.
-  * `deepseek/deepseek-v3`: DeepSeek V3 is a powerful Mixture-of-Experts (MoE) language model with 671B total parameters, activating 37B parameters for each token. It achieves results comparable to Claude Sonnet 3.5.
+  * `deepseek/deepseek-v3`: DeepSeek V3 0324 version is a powerful Mixture-of-Experts (MoE) language model with 700B total parameters, activating 37B parameters for each token. It demonstrates notable improvements over its predecessor, DeepSeek-V3, and achieves results comparable to Claude Sonnet 3.7.
   * `deepseek/deepseek-r1-distill-llama-70b`: A distilled version of DeepSeek R1, using Llama 3 70B as the base model. It achieves results comparable to DeepSeek R1 but much more cost-efficient and faster.
   * `NaniDAO/deepseek-r1-qwen-2.5-32B-ablated`: A distilled version of DeepSeek R1, with using Qwen 2.5 32B as the base model. It uses ablation technique to remove refusal mechanism to make the model always generate responses. **Uncensored**.
   * `mistralai/mixtral-8x22b-instruct`: A Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
