--- a/introduction.mdx
+++ b/introduction.mdx
@@ -19,15 +19,11 @@ Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources
 
 ### Key Offerings
 
-- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Deploy workloads and access AI services through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines. We support a wide range of models: LLMs, VLMs, Embedding Models, Image & Video Generation Models, and more. Start building with our [Developer Guide](https://docs.heurist.ai/dev-guide/integration-overview).
+- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Use AI through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines. We support a wide range of models: LLMs, VLMs, Embedding Models, Image & Video Generation Models, and more. Learn more about our [Supported Model List](https://docs.heurist.ai/dev-guide/supported-models).
 
-- **Heurist Agent Framework**: A framework for building AI agents that connect to AI services in Heurist in a decentralized manner by default. We enable AI agents to interact with each other, acquire knowledge from the world, and execute tasks.
+- **Heurist Agent Framework**: Build your own AI agents that connect to Heurist services and interact with other agents. Our framework makes it easy to create agents that acquire crypto knowledge, manage social media accounts, and execute complex tasks autonomously.
 
-- **Elasticity in Compute Resources**: Heurist dynamically scales compute resources to meet fluctuating demand, and adopts an adaptive token emission mechanism that responds to network activity. Elasticity in these two aspects ensures optimal resource utilization and economic stability.
-
-- **Alignment-Centric Economics (ACE)**: Our economic model aligns all participants towards shared goals: expanding compute resources, optimizing utilization, advancing AI models, and preserving long-term protocol value. Heurist Token is tightly integrated into every interaction in the ecosystem.
-
-- **Web3-Native AI Ecosystem**: By supporting and incubating AI applications targeted to crypto users, such as finetuned models for Web3 IPs, onchain/offchain agents with crypto expertise, and AIGC NFTs, Heurist brings cutting-edge AI to the crypto world.
+- **Heurist Mesh**: An open network of specialized AI agents that work together in a composable agent swarm. Each agent is purpose-built for specific tasks - analyzing token metrics, scanning smart contracts, processing onchain data, and more. Mesh agents are instantly accessible via REST APIs and MCP (Model Context Protocol). Community developers can contribute their own specialized agents, potentially earning per-use revenue. [Explore Heurist Mesh](https://docs.heurist.ai/agent-framework/heurist-mesh).
 
 <CardGroup cols={2}>
   <Card
