--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -11,7 +11,7 @@ You can use the following model name as `model_id` in Heurist API/SDK.
 
 ### Large Language Models (LLMs)
   * `deepseek/deepseek-r1`: DeepSeek R1 is a groundbreaking open-source AI model that achieves performance comparable to OpenAI's o1 model across math, code, and reasoning tasks, supporting self-verification and reflection, while being more cost-efficient than its competitors.
-  * `deepseek/deepseek-v3`: DeepSeek V3 0324 version is a powerful Mixture-of-Experts (MoE) language model with 700B total parameters, activating 37B parameters for each token. It demonstrates notable improvements over its predecessor, DeepSeek-V3, and achieves results comparable to Claude Sonnet 3.7.
+  * `deepseek/deepseek-v3`: DeepSeek V3 0324 version is a powerful Mixture-of-Experts (MoE) language model with 685B total parameters, activating 37B parameters for each token. It demonstrates notable improvements over its predecessor, DeepSeek-V3, and achieves results comparable to Claude Sonnet 3.7.
   * `deepseek/deepseek-r1-distill-llama-70b`: A distilled version of DeepSeek R1, using Llama 3 70B as the base model. It achieves results comparable to DeepSeek R1 but much more cost-efficient and faster.
   * `NaniDAO/deepseek-r1-qwen-2.5-32B-ablated`: A distilled version of DeepSeek R1, with using Qwen 2.5 32B as the base model. It uses ablation technique to remove refusal mechanism to make the model always generate responses. **Uncensored**.
   * `mistralai/mixtral-8x22b-instruct`: A Sparse Mixture-of-Experts model featuring 8 experts and 22 billion parameters, optimized for instruction-following with strong performance in reasoning and multilingual capabilities.
@@ -22,6 +22,7 @@ You can use the following model name as `model_id` in Heurist API/SDK.
   * `qwen/qwen-2.5-coder-32b-instruct`: State-of-the-art open-source code model, matching the coding capabilities of GPT-4o.
   * `hermes-3-llama3.1-8b`: Flagship Hermes LLM trained by Nous Research, with advanced agentic capabilities, enhanced roleplaying, reasoning, multi-turn conversation, long context coherence and agentic abilities. **Uncensored**. **Supports tool calling**
   * `qwen/qwen-2.5-coder-32b-instruct`: Qwen2.5-Coder is the latest series of Code-Specific Qwen large language models (formerly known as CodeQwen)
+  * `asi1-mini`: ASI1-mini is the first Web3-native LLM, specifically built and optimized for supporting complex agentic workflows. Developed by Fetch.ai, it features adaptive reasoning and context-aware decision-making.
 
 ### Note on uncensored models:
 
