--- a/dev-guide/heurist-mesh/introduction.mdx
+++ b/dev-guide/heurist-mesh/introduction.mdx
@@ -117,7 +117,7 @@ To discover all available agents, their capabilities, and required parameters, u
 
 ```javascript
 // Fetch agent metadata
-const metadata = await fetch("https://mesh.heurist.ai/mesh_agents_metadata.json")
+const metadata = await fetch("https://mesh.heurist.ai/metadata.json")
   .then(response => response.json());
 
 // Example: Get tools for a specific agent
