update tokenomics page

--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -8,7 +8,7 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 
 * Pay for AI services
 
-* Stake to secure the network and earn protocol fees
+* Stake to secure the network and earn revenue from the protocol
 
 * Vote on governance decisions
 
@@ -32,13 +32,23 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 | Unallocated Grants                      | 6,855,000    | 0.69              | 0            | 3              | 0                      |
 | Private Angels and VC                   | 60,000,000   | 6.00              | 0            | 3              | 24                     |
 | Team and Advisors                       | 150,000,000  | 15.00             | 0            | 3              | 24                     |
-| Mining (Exclusing Season 1)             | 500,000,000  | 50.00             | 0            | 3              | 120                    |
+| Mining and Staking (Exclusing Season 1) | 500,000,000  | 50.00             | 0            | 3              | 120                    |
 | Protocol Treasury                       | 167,000,000  | 16.70             | 0            | 6              | 48                     |
 
 ### Mining Emission
 
 **Phase 1**: (Completed. Rewards already distributed) 50M HEU airdropped to all miners at a snapshot taken at July 19th, 2024. See [Season 1 (Ended)](/protocol-overview/mining/season-1)
 
-**Phase 2**: (Completed. Rewards to be distributed in March 2025) 10M HEU airdropped to all miners from July 19th, 2024 to Janurary 18th, 2025. See [Season 2 (Ended)](/protocol-overview/mining/season-2)
+**Phase 2**: (Completed. Rewards already distributed) 10M HEU airdropped to all miners from July 19th, 2024 to Janurary 18th, 2025. See [Season 2 (Ended)](/protocol-overview/mining/season-2)
 
 **Phase 3**: (Not Started) Stay tuned for future mining opportunities.
+
+### Staking Emission
+
+The rewards are structured as:
+
+* Base rewards: 50% APR from protocol emissions
+* Dynamic rewards: Variable returns from protocol revenue (API credit purchases)
+* Auto-compounding: All rewards automatically reinvest through the stHEU mechanism
+
+Stakers must complete a 30-day lockup period when unstaking, during which tokens cannot be transferred.
