--- a/agent-framework/heurist-mesh.mdx
+++ b/agent-framework/heurist-mesh.mdx
@@ -8,41 +8,62 @@ title: "Heurist Mesh"
     style={{ width: '100%', display: 'block', margin: '0 auto' }}
   />
 
-Heurist Mesh is an open network of modular and purpose-built AI agents. Each agent is a specialized unit that can process data, generate reports, or engage in conversations, while collectively forming an intelligent swarm to tackle complex tasks. Built on decentralized compute and powered by diverse open-source AI models, Mesh agents can be combined into powerful workflows for cost-efficient and highly flexible solutions.
+Heurist Mesh is an open network of modular, purpose-built AI agents. Each agent is a specialized unit that can process data, generate reports, or engage in conversations, while collectively forming an intelligent swarm to tackle complex tasks. Built on decentralized compute and powered by diverse AI models, Mesh agents can be combined into powerful workflows for cost-efficient and highly flexible solutions.
 
 Mesh agents are designed to be interoperable with all major AI platforms and frameworks. They communicate with simple REST APIs and [Model Context Protocol (MCP)](https://docs.anthropic.com/en/docs/agents-and-tools/mcp).
 
 **Key Features:**
 
 - **Modular and Composable:**  
-  Every agent focuses on a specific task, such as token analysis, social media research, or smart contract security. They are accessible through a unified interface, allowing them to be used in any application or by other agents.
+  Every agent focuses on a specific task, such as token analysis, social media research, or smart 
+  contract security. They are accessible through a unified interface, allowing them to be used in any 
+  application or by other agents.
   
 - **Flexible Deployment:**
-  Agents can run on Heurist’s hosted AI-as-a-Service Cloud, on your own servers, or even within secure Trusted Execution Environments (TEEs) if the agent is performing sensitive tasks.
+  Agents can run on Heurist’s hosted AI-as-a-Service Cloud, on your own servers, or even within secure 
+  Trusted Execution Environments (TEEs) if the agent is performing sensitive tasks.
   
 - **Community-Driven Development:**  
-  With each new agent contributed by the community, Heurist Mesh grows stronger. More integrations mean smarter workflows and better, more accessible AI services for everyone.
+  With each new agent contributed by the community, Heurist Mesh grows stronger. More integrations mean 
+  smarter workflows and better, more accessible AI services for everyone.
+
+## Introducing [mcp.heurist.ai](https://mcp.heurist.ai): Deploy Your Own MCP Server Today
+
+You can now create dedicated MCP servers on-demand at [mcp.heurist.ai](https://mcp.heurist.ai), accessible from any MCP client (Claude Desktop, @cursor_ai, @cline, and more).
+
+- **Select any combination of agents and tools you need**
+- Instantly spin up a managed MCP server with secure data access and unified payment
+- Just one unified Heurist API key with pay-per-use pricing gets you access to the entire ecosystem
+
+### Free MCP Server
+We also provide a free hosted SSE endpoint at https://sequencer-v2.heurist.xyz/mcp/sse. This 
+includes all the tools from the following commonly used agents: CoingeckoTokenInfoAgent, 
+ElfaTwitterIntelligenceAgent, ExaSearchAgent, DexScreenerTokenInfoAgent, ZerionWalletAnalysisAgent. This 
+is a shared server and the performance may be unstable.
+
+As of now, AI code editors like Cursor, Windsurf, Trae can directly access SSE servers. For Claude Desktop users, we recommend installing [mcp-proxy]
+(https://github.com/sparfenyuk/mcp-proxy) to connect to the SSE server.
 
 ---
 
-**What is Model Context Protocol (MCP)?**
+## Building the Compositional AI Future
 
-MCP is an open protocol that standardizes how applications provide context to LLMs. Think of MCP like a USB-C port for AI applications. Just as USB-C provides a standardized way to connect your devices to various peripherals and accessories, MCP provides a standardized way to connect AI models to different data sources and tools.
+The road ahead for Heurist Mesh extends far beyond what we've built today. Our next steps include:
 
-**Available Now:** We provide a hosted SSE endpoint at https://sequencer-v2.heurist.xyz/mcp/sse. This includes all the tools from the following commonly used agents: CoingeckoTokenInfoAgent, ElfaTwitterIntelligenceAgent, ExaSearchAgent, DexScreenerTokenInfoAgent, ZerionWalletAnalysisAgent. This is a shared server and the performance may be unstable.
+- **Onchain Action Agents:** Expanding beyond data intelligence to enable agents that execute transactions and control computers directly—turning insights into autonomous actions.
+- **Self-Custody Agent Memory:** Encrypted, wallet-bound memory systems that follow users and agents across applications, enabling deeply personalized experiences while preserving privacy.
+- **Self-Evolving Intelligence:** Meta-agents that assemble new tools and build new agents on the run, instead of using predetermined code.
 
-Cursor can directly access SSE servers. For Claude Desktop users, we recommend installing [mcp-proxy](https://github.com/sparfenyuk/mcp-proxy) to connect to the SSE server.
-
-**In Development:** Heurist Mesh acts as a customizable and personalized MCP server provider. With an Ethereum wallet, you can select the agents and tools you want to use, and create a dedicated MCP server for your use case. 
+Heurist Mesh welcomes both human and AI contributors. This permissionless, modular architecture transforms AI development to symbiotic intelligence that grows organically.
 
 ---
 
-**For Developers:**
+## For Developers
 
 - [Heurist Mesh Github](https://github.com/heurist-network/heurist-agent-framework/tree/main/mesh)
-
 - [Start using Heurist Mesh with API](https://docs.heurist.ai/dev-guide/heurist-mesh/endpoint)
-
 - [Access Heurist Mesh MCP](https://github.com/heurist-network/heurist-mesh-mcp-server)
 
-Coming soon: bounties for new agents!
+---
+
+**Try it now:** [mcp.heurist.ai](https://mcp.heurist.ai)
