update mesh docs

--- a/agent-framework/heurist-mesh.mdx
+++ b/agent-framework/heurist-mesh.mdx
@@ -27,19 +27,16 @@ Mesh agents are designed to be interoperable with all major AI platforms and fra
   With each new agent contributed by the community, Heurist Mesh grows stronger. More integrations mean 
   smarter workflows and better, more accessible AI services for everyone.
 
-## Introducing [mcp.heurist.ai](https://mcp.heurist.ai): Deploy Your Own MCP Server Today
+## Introducing [Heurist Mesh MCP Portal](https://mcp.heurist.ai): Deploy Your Own MCP Server Today
 
-You can now create dedicated MCP servers on-demand at [mcp.heurist.ai](https://mcp.heurist.ai), accessible from any MCP client (Claude Desktop, @cursor_ai, @cline, and more).
+You can now create dedicated MCP servers on-demand at [mcp.heurist.ai](https://mcp.heurist.ai), accessible from any MCP client (Claude Desktop, Cursor, Windsurf, and more).
 
-- **Select any combination of agents and tools you need**
+- Select any combination of agents and tools you need
 - Instantly spin up a managed MCP server with secure data access and unified payment
 - Just one unified Heurist API key with pay-per-use pricing gets you access to the entire ecosystem
 
 ### Free MCP Server
-We also provide a free hosted SSE endpoint at https://sequencer-v2.heurist.xyz/mcp/sse. This 
-includes all the tools from the following commonly used agents: CoingeckoTokenInfoAgent, 
-ElfaTwitterIntelligenceAgent, ExaSearchAgent, DexScreenerTokenInfoAgent, ZerionWalletAnalysisAgent. This 
-is a shared server and the performance may be unstable.
+We also provide a free hosted SSE endpoint at https://sequencer-v2.heurist.xyz/mcp/sse. This includes all the tools from the following commonly used agents: CoingeckoTokenInfoAgent, ElfaTwitterIntelligenceAgent, ExaSearchAgent, DexScreenerTokenInfoAgent, ZerionWalletAnalysisAgent. This is a shared server and the performance may be unstable.
 
 As of now, AI code editors like Cursor, Windsurf, Trae can directly access SSE servers. For Claude Desktop users, we recommend installing [mcp-proxy]
 (https://github.com/sparfenyuk/mcp-proxy) to connect to the SSE server.
@@ -53,6 +50,8 @@ The road ahead for Heurist Mesh extends far beyond what we've built today. Our n
 - **Onchain Action Agents:** Expanding beyond data intelligence to enable agents that execute transactions and control computers directly—turning insights into autonomous actions.
 - **Self-Custody Agent Memory:** Encrypted, wallet-bound memory systems that follow users and agents across applications, enabling deeply personalized experiences while preserving privacy.
 - **Self-Evolving Intelligence:** Meta-agents that assemble new tools and build new agents on the run, instead of using predetermined code.
+
+We envision a future where anyone can easily customize powerful agents to their needs by assembling existing agents and tools. Agents should not be limited to specific platforms, models, but work seamlessly across all platforms, while being personalized, private, and secure.
 
 Heurist Mesh welcomes both human and AI contributors. This permissionless, modular architecture transforms AI development to symbiotic intelligence that grows organically.
 
