remove mining, update CA and overview

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -15,43 +15,70 @@ title: "Welcome to Heurist"
 
 ## Introducing Heurist
 
-Heurist is a decentralized AI-as-a-Service cloud. We aggregate compute resources from trusted DePIN partners to provide serverless AI services. Heurist’s API-first infrastructure elinimates the need for developers to manage GPU machines, and enables cost-efficient, censorship-free AI integration with APIs.
+Heurist is the full-stack infrastructure for the AI economy. We unite the AI ecosystem through comprehensive infrastructure. From compute to capital, we provide everything needed to build, scale, and fund the next generation of intelligent applications.
 
-### Key Offerings
+### Core Infrastructure
 
-- **Serverless AI-as-a-Service**: Heurist abstracts away the complexities of hardware management. Use AI through intuitive APIs and SDKs with a few lines of code, saving the hassle of managing GPU machines. We support a wide range of models: LLMs, VLMs, Embedding Models, Image & Video Generation Models, and more. Learn more about our [Supported Model List](https://docs.heurist.ai/dev-guide/supported-models).
+- **Heurist Cloud**: Access AI models through simple APIs without managing GPU infrastructure. We provide serverless inference for LLMs, VLMs, image/video generation models, and more. Heurist Cloud also includes [Heurist Mesh](https://docs.heurist.ai/agent-framework/heurist-mesh), our marketplace of specialized AI agents that work together in a composable agent swarm, from token analysis to social media intelligence, fully compatible with MCP standards and A2A protocol. Learn more about our [Supported Model List](https://docs.heurist.ai/dev-guide/supported-models).
 
-- **Heurist Agent Framework**: Build your own AI agents that connect to Heurist services and interact with other agents. Our framework makes it easy to create agents that acquire crypto knowledge, manage social media accounts, and execute complex tasks autonomously.
+- **Heurist Chain**: Our ZK Layer 2 infrastructure powers the payment rails for autonomous AI systems. Enable instant, low-fee micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
 
-- **Heurist Mesh**: An open network of specialized AI agents that work together in a composable agent swarm. Each agent is purpose-built for specific tasks - analyzing token metrics, scanning smart contracts, processing onchain data, and more. Mesh agents are instantly accessible via REST APIs and MCP (Model Context Protocol). Community developers can contribute their own specialized agents, potentially earning per-use revenue. [Explore Heurist Mesh](https://docs.heurist.ai/agent-framework/heurist-mesh).
+### Open Source Foundation
+- **Heurist Agent Framework**: The backbone of our ecosystem - an open-source framework for building AI agents that connect to Heurist services and interact with other agents. Create agents that acquire knowledge, execute complex tasks autonomously, and contribute to the growing agent marketplace. [Start building with our framework](https://agent.heurist.ai/)
 
+### Ecosystem Applications
+Experience the power of Heurist through our flagship applications:
+<CardGroup cols={3}>
+  <Card
+    title="Heurist Imagine"
+    icon="image"
+    href="https://imagine.heurist.ai"
+  >
+    Generate stunning AI images and videos with state-of-the-art models
+  </Card>
+  <Card
+    title="Pondera"
+    icon="message"
+    href="https://pondera.ai"
+  >
+    Chat with advanced AI assistants powered by cutting-edge language models
+  </Card>
+  <Card
+    title="Heurist Deep Research"
+    icon="magnifying-glass"
+    href="https://research.heurist.ai"
+  >
+    Deploy multiple agents to scan hundreds of pages in minutes. Payments powered by x402 protocol
+  </Card>
+</CardGroup>
+
+### Get Started
 <CardGroup cols={2}>
   <Card
     title="Explore Heurist Ecosystem"
     icon="globe"
     href="https://www.heurist.ai/ecosystem"
   >
-    Discover Heurist Ecosystem
+    Discover all apps and services built on Heurist
   </Card>
   <Card
-    title="Start Building with Heurist"
+    title="Start Building"
     icon="code"
     href="https://docs.heurist.ai/dev-guide/integration-overview"
   >
-    Learn how to integrate Heurist AI services
+    Integrate Heurist AI services with just a few lines of code
   </Card>
 </CardGroup>
-
 <CardGroup cols={2}>
   <Card
-    title="Heurist Agent Framework"
-    icon="code"
-    href="https://agent.heurist.ai/"
+    title="Heurist Mesh Agents"
+    icon="network-wired"
+    href="https://docs.heurist.ai/agent-framework/heurist-mesh"
   >
-    Build AI agents with Heurist
+    Access specialized agents via REST APIs and MCP
   </Card>
   <Card
-    title="Contact us"
+    title="Contact Us"
     icon="envelope"
     href="mailto:team@heurist.xyz"
   >
