--- a/protocol-overview/contract-addresses.mdx
+++ b/protocol-overview/contract-addresses.mdx
@@ -2,7 +2,7 @@
 title: "Contract Addresses"
 ---
 
-# Core Contracts
+# Token Contracts
 
 | Name   | Network     | Link |
 |--------|-------------|------|
@@ -16,16 +16,12 @@ title: "Contract Addresses"
 |--------|-------------|------|
 | HEU    | Base        |https://basescan.org/address/0xfa13536bc4181db19fe93da82115f43f5c95761c|
 
-# Airdrop Claim Contracts
+# Payment Contracts
 
 | Network     | Link |
 |-------------|------|
-| ZKsync Era  |https://explorer.zksync.io/address/0xA2C79d08Bb1Ac896eEAb1eB3Cae1c19bdB25d2ff|
-| Base        |https://basescan.org/address/0xCf84821b828Fb21f531A02DD5f30fb029757E30C|
-
-# zkImagine and Create-to-Earn Contracts
-
-| Name        | Link                                                                                                                                |
-|-------------|-------------------------------------------------------------------------------------------------------------------------------------|
-| zkImagine   | [https://explorer.zksync.io/address/0x5c63369e3f04018a0c32559661e025f051fb071e](https://explorer.zksync.io/address/0x5c63369e3f04018a0c32559661e025f051fb071e) |
-| ChestRewards | [https://explorer.zksync.io/address/0x1379E87b0fFdD43839C298E5Af047D2ccbbFea6F](https://explorer.zksync.io/address/0x1379E87b0fFdD43839C298E5Af047D2ccbbFea6F) |
+| Base        | https://basescan.org/address/0x59d944b7ff8c432ff395683f5c95d97ca0237986 |
+| ZKsync Era  | https://explorer.zksync.io/address/0xf188c87dE7b040bb5Dc6bD9957C7aa16309489B6 |
+| BNB Chain   | https://bscscan.com/address/0xc07242374De5A4c047Cf804B95F01384E0AAaBBd |
+| Mantle      | https://explorer.mantle.xyz/address/0x59D944B7Ff8c432ff395683f5c95d97cA0237986 |
+| Arbitrum    | https://arbiscan.io/address/0x59d944b7ff8c432ff395683f5c95d97ca0237986 |
