--- a/protocol-overview/tokenomics.mdx
+++ b/protocol-overview/tokenomics.mdx
@@ -41,7 +41,7 @@ HEU (pronounced as "hue") is the native token of Heurist Protocol. The maximum s
 
 **Phase 2**: (Completed. Rewards already distributed) 10M HEU airdropped to all miners from July 19th, 2024 to Janurary 18th, 2025. See [Season 2 (Ended)](/protocol-overview/mining/season-2)
 
-**Phase 3**: (Not Started) Stay tuned for future mining opportunities.
+Mining is no longer available. Stay tuned for future reward opportunities.
 
 ### Staking Emission
 
