--- a/ecosystem/imagine.mdx
+++ b/ecosystem/imagine.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Heurist Imagine"
-description: "Heurist Imagine is an AI image generator, powered by decentralized GPUs in Heurist network. We curate the best image generation models and offer them for free. Users can generate images of varied visual styles, themes, characters with text prompts."
+description: "Heurist Imagine is an AI image and video generator. Users can generate and edit images and videos of varied visual styles, themes, characters with text prompts."
 ---
 
 ### Features
@@ -35,53 +35,4 @@ All models are available for API access. See [API documentation](../dev-guide/im
 
 #### Video Generation
 
-We support Hunyuan video generation. The generation time is typically a few minutes. Video generation is also available for API access, see [Text-to-Video API documentation](../dev-guide/heurist-sdk/comfyui-txt2vid).
-
-### zkImagine NFT
-
-[zkImagine](https://element.market/collections/zkimagine?search%5Btoggles%5D%5B0%5D=ALL) is a NFT collection on ZKsync Era mainnet. You can mint your AI image into zkImagine NFT to permanently store it in your digital wallet. The supply is unlimited. Creators can launch sub-collections from the zkImagine collection, and turn your creativity into your customized NFT collection.
-
-
-<img
-    src="/images/ecosystem/zkimagine_art.png" 
-    alt="Art"
-    style={{ width: '100%', display: 'block', margin: '0 auto' }}
-  />
-
-### Mint Fee
-
-* Regular mint: 0.001 ETH
-
-* Mint with referral: 0.0009 ETH (for every referred mint, 0.0001 ETH revenue goes to the referrer)
-
-* Free mint: We give free mint whitelists to Heurist community members, such as early miners, social media campaign participants, Discord roles, and ambassadors.
-
-### Contract Address
-
-
-
-<CardGroup cols={2}>
-  <Card
-    title="Proxy"
-    icon="link"
-    href="https://explorer.zksync.io/address/0x5c63369e3f04018a0c32559661e025f051fb071e"
-  >
-  </Card>
-  <Card
-    title="Implementation"
-    icon="link"
-    href="https://explorer.zksync.io/address/0x069de8a7f0b39280d84eccf29d3f071052051dd3"
-  >
-  </Card>
-
-</CardGroup>
-
-### Audit
-
-<Card
-    title="Zokyo"
-    icon="link"
-    href="https://github.com/heurist-network/zkImagine-NFT/blob/main/Heurist_Zokyo_audit_report_Aug1st_2024.pdf"
-  >
-  </Card>
-
+We support multiple video generation models. The generation time is typically a few minutes. Video generation is also available for API access, see [Text-to-Video API documentation](../dev-guide/heurist-sdk/comfyui-txt2vid).
