fix: pondera link

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -39,7 +39,7 @@ Experience the power of Heurist through our flagship applications:
   <Card
     title="Pondera"
     icon="message"
-    href="https://pondera.ai"
+    href="https://pondera.heurist.ai"
   >
     Chat with advanced AI assistants powered by cutting-edge language models
   </Card>
