--- a/dev-guide/supported-models.mdx
+++ b/dev-guide/supported-models.mdx
@@ -5,9 +5,9 @@ description: "Explore a wide range of AI models. We support models for natural l
 
 ## Supported Models
 
-The following open source models are supported. [View the public model list here](https://github.com/heurist-network/heurist-models/blob/main/models.json)
-
 You can use the following model name as `model_id` in Heurist API/SDK.
+
+For interactive testing and API exploration, visit our [Chat Completion Endpoint](https://docs.heurist.ai/dev-guide/llm-gateway/endpoint) documentation which includes a built-in API testing interface.
 
 ### Large Language Models (LLMs)
   * `deepseek/deepseek-r1`: DeepSeek R1 is a groundbreaking open-source AI model that achieves performance comparable to OpenAI's o1 model across math, code, and reasoning tasks, supporting self-verification and reflection, while being more cost-efficient than its competitors.
