add pondera and deep research

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -23,6 +23,8 @@ Heurist is the full-stack infrastructure for the AI economy. We unite the AI eco
 
 - **Heurist Chain**: Our ZK Layer 2 infrastructure powers the payment rails for autonomous AI systems. Enable instant, low-fee micropayments between agents, pay for AI services on-demand, and build commerce-enabled AI applications without traditional payment barriers.
 
+- **Heurist Digital Assets (Beta)**: Regulated platform for AI startup tokenization. We enable companies to tokenize equity and raise capital globally. Connect with global investors, ensure transparent cap table management, and unlock liquidity for early stakeholders while maintaining full regulatory compliance and security standards. [Explore tokenization opportunities](https://tokenize.heurist.ai)
+
 ### Open Source Foundation
 - **Heurist Agent Framework**: The backbone of our ecosystem - an open-source framework for building AI agents that connect to Heurist services and interact with other agents. Create agents that acquire knowledge, execute complex tasks autonomously, and contribute to the growing agent marketplace. [Start building with our framework](https://agent.heurist.ai/)
 
